# eai

./: .gitignore  pyproject.toml
code/: LO1_tabular.ipynb  LO2_text.ipynb  LO3_images.ipynb  mini_challenge.ipynb  xai_denis_schatzmann.ipynb
