[project]
name = "eai"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib (==1.4.2)",
    "numpy (==1.26.4)",
    "pandas (==2.2.2)",
    "matplotlib (==3.9.2)",
    "scikit-learn (==1.5.1)",
    "xgboost (==2.1.1)",
    "shap (==0.46.0)",
    "umap-learn (==0.5.6)",
    "torch (==2.4.1)",
    "torchvision (==0.19.1)",
    "nltk (==3.9.1)",
    "seaborn (==0.13.2)",
    "transformers (==4.44.2)",
    "lime (==0.2.0.1)",
    "tqdm (==4.65.0)",
    "tensorflow (==2.17.0)",
    "opencv-python-headless (==4.10.0.84)",
    "captum (==0.7.0)",
    "timm (==1.0.9)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
